<resources>
    <string name="app_name">LTE Dongle Manager</string>

    <!-- Ethernet + Wifi Switch -->
    <string name="ethernet_wifi_header">Ethernet + Wifi Switch</string>
    <string name="ethernet_wifi_interface_name_title">Ethernet interface</string>
    <string name="ethernet_wifi_aps_title">Prioritized Access Points</string>
    <string name="ethernet_wifi_aps_summary">Access points that, when available, will turn off the ethernet interface</string>

    <string name="usb_reset_btn_txt">USB Reset\n(via setprops)</string>
    <string name="usb_modeswitch_btn_txt">usb_modeswitch\n(parameters hard-coded)</string>
    <string name="huawei_switchDebugMode_btn_txt">Huawei SwitchDebugMode\n(at 192.168.8.1)</string>
    <string name="ethernet_wifi_btn_txt">Wi-Fi Scan</string>
    <string name="settings_btn_txt">Settings</string>

    <string name="location_permission_required_title">Location Permission</string>
    <string name="location_permission_required_message">Permission is required to the app read the Wi-Fi connections</string>
    <string name="location_permission_required_button">Set up Permission</string>

    <string name="service_notification_group_name">Default</string>
    <string name="service_notification_title">LTE Dongle Manager</string>

    <string name="toast_success">Command executed successfully!</string>
    <string name="toast_exception">Exception: %s</string>

</resources>

