<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/grid_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:alignmentMode="alignBounds"
    android:columnCount="2"
    android:padding="4dp"
    android:rowOrderPreserved="false"
    android:useDefaultMargins="true">

    <Button
        android:id="@+id/usb_reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/usb_reset_btn_txt" />

    <Button
        android:id="@+id/usb_modeswitch_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/usb_modeswitch_btn_txt" />

    <Button
        android:id="@+id/huawei_switchDebugMode_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/huawei_switchDebugMode_btn_txt" />

    <Button
        android:id="@+id/wifi_scan_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/ethernet_wifi_btn_txt" />

    <Button
        android:id="@+id/settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/settings_btn_txt" />

</GridLayout>